[gd_scene load_steps=14 format=3 uid="uid://dt0weymuwtkif"]

[ext_resource type="Script" uid="uid://pm4s0telhvbu" path="res://enemies/enemy.gd" id="1_epsnb"]
[ext_resource type="Texture2D" uid="uid://cx0ni1wvl78g0" path="res://enemies/textures/iseen_a_skull.png" id="1_fw1ev"]
[ext_resource type="Resource" uid="uid://ceba2t3qkajfx" path="res://enemies/data/enemy_resource.tres" id="2_4w5fm"]
[ext_resource type="PackedScene" uid="uid://ycxhwv4g5a5v" path="res://vfx/EnemyIndicator.tscn" id="3_orwns"]

[sub_resource type="ViewportTexture" id="ViewportTexture_7frlh"]
viewport_path = NodePath("ToAnimate/HealthBar3D/SubViewport")

[sub_resource type="SphereShape3D" id="SphereShape3D_7frlh"]
radius = 0.3896371

[sub_resource type="Animation" id="Animation_7frlh"]
resource_name = "bob"
loop_mode = 2
step = 0.0333333
tracks/0/type = "position_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ToAnimate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 0, 0.5, 0, 1, 1, 0, 0.7, 0)

[sub_resource type="Animation" id="Animation_07tka"]
resource_name = "hurt"
length = 0.30000305
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ToAnimate/Sprite3D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.16666667, 0.20000002, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(0.9, 0.9, 0.9), Vector3(1, 1, 1), Vector3(1.09, 1.09, 1.09), Vector3(1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ToAnimate/Sprite3D:modulate")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.16666667, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.84313726, 0.39607844, 0.39607844, 0.69411767), Color(1, 1, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3t1x0"]
resource_name = "die"
length = 0.56666946
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ToAnimate/Sprite3D:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.56666666),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(1, 1, 1), Vector3(1.08, 1.08, 1.08), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ToAnimate/Sprite3D:flip_h")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.13333334, 0.26666668, 0.36666667, 0.46666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.56666666),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a6vjd"]
_data = {
&"bob": SubResource("Animation_7frlh"),
&"die": SubResource("Animation_3t1x0"),
&"hurt": SubResource("Animation_07tka")
}

[sub_resource type="Animation" id="Animation_orwns"]
resource_name = "attack"
length = 0.4
step = 0.0333333
tracks/0/type = "scale_3d"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ToAnimate/Sprite3D")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = PackedFloat32Array(0, 1, 1, 1, 1, 0.033333335, 1, 0.95, 0.95, 0.95, 0.1, 1, 1, 1, 1, 0.2, 1, 1.2, 1.2, 1.2, 0.4, 1, 1, 1, 1)

[sub_resource type="Animation" id="Animation_a6vjd"]
resource_name = "ranged_attack"
length = 0.8
step = 0.0333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ToAnimate/Sprite3D:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.26666668, 0.36666667, 0.5, 0.6333333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5.505), Vector2(0, 10), Vector2(0, -5.505), Vector2(0, 10), Vector2(0, -5.505), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_07tka"]
_data = {
&"attack": SubResource("Animation_orwns"),
&"ranged_attack": SubResource("Animation_a6vjd")
}

[node name="Enemy" type="Node3D"]
script = ExtResource("1_epsnb")
data = ExtResource("2_4w5fm")
preferred_range = 1

[node name="ToAnimate" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="HealthBar3D" type="Sprite3D" parent="ToAnimate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3622712, 0)
billboard = 2
texture_filter = 0
texture = SubResource("ViewportTexture_7frlh")

[node name="SubViewport" type="SubViewport" parent="ToAnimate/HealthBar3D"]
size = Vector2i(50, 5)

[node name="HealthBar" type="ProgressBar" parent="ToAnimate/HealthBar3D/SubViewport"]
unique_name_in_owner = true
modulate = Color(0, 18.892157, 0, 1)
custom_minimum_size = Vector2(50, 5)
offset_right = 50.0
offset_bottom = 5.0
max_value = 1.0
value = 0.5
show_percentage = false

[node name="Sprite3D" type="Sprite3D" parent="ToAnimate"]
unique_name_in_owner = true
billboard = 2
texture_filter = 0
texture = ExtResource("1_fw1ev")

[node name="VisionRaycast" type="RayCast3D" parent="ToAnimate/Sprite3D"]
unique_name_in_owner = true
transform = Transform3D(1.0526316, 0, 0, 0, 1.0526316, 0, 0, 0, 1.0526316, 0, 0, 0)
target_position = Vector3(0, 0, -1000)
collision_mask = 10
hit_from_inside = true
collide_with_areas = true
collide_with_bodies = false

[node name="EnemyCollision" type="Area3D" parent="ToAnimate" groups=["enemy_collision"]]
unique_name_in_owner = true
collision_layer = 4
collision_mask = 16

[node name="CollisionShape3D" type="CollisionShape3D" parent="ToAnimate/EnemyCollision"]
shape = SubResource("SphereShape3D_7frlh")

[node name="MovementRaycast" type="RayCast3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
target_position = Vector3(0, 0, -1.5)
collide_with_areas = true
collide_with_bodies = false

[node name="EnemyIndicator" parent="." instance=ExtResource("3_orwns")]
unique_name_in_owner = true

[node name="IdleAnim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_a6vjd")
}
autoplay = "bob"

[node name="AttackAnim" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_07tka")
}

[node name="Behaviors" type="Node" parent="."]
unique_name_in_owner = true
